# imx

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: ImxCompile.cmake  ReImGuiCompile.cmake
compiler/: README.md  package-lock.json  package.json  tsconfig.json
compiler/src/: cli.ts  compile.ts  components.ts  diagnostics.ts  emitter.ts  index.ts  init.ts  ir.ts  lowering.ts  parser.ts  validator.ts  watch.ts
compiler/src/templates/: async.ts  custom.ts  filedialog.ts  hotreload.ts  index.ts  minimal.ts  networking.ts  persistence.ts
compiler/tests/: cli.test.ts  diagnostics.test.ts  emitter.test.ts  index.test.ts  lowering.test.ts  parser.test.ts  validator.test.ts  watch.test.ts
docs/: api-reference.md  compiler-bugs.md  compiler-flaws.md  example-ideas.md  hotreload-to-release.md  llm-prompt-reference.md  mvp.md  quick-start.md  roadmap.md  spec.md
docs/superpowers/plans/: 2026-04-04-batch1-2-components.md  2026-04-04-custom-widgets-and-themes.md  2026-04-04-dock-layout-and-theme.md  2026-04-04-image-component.md  2026-04-04-reimgui-mvp.md  2026-04-05-adaptive-frame-loop.md  2026-04-05-batch3-4-components.md  2026-04-05-cpp-binding.md  2026-04-05-struct-binding-fixes.md  2026-04-09-example-restructure.md  2026-04-09-font-embed.md  2026-04-09-phase13-font-input-expansion.md  2026-04-09-phase17-window-popup-control.md  2026-04-09-phase18-text-display-variants.md  2026-04-11-phase20-async-template.md  2026-04-11-phase20-custom-template.md  2026-04-11-phase20-hotreload-template.md  2026-04-11-phase20-networking-template.md  2026-04-11-phase20-persistence-template.md  2026-04-11-phase20-project-templates.md
docs/superpowers/specs/: 2026-04-04-batch1-2-components-design.md  2026-04-04-custom-widgets-and-themes-design.md  2026-04-04-dock-layout-and-theme-design.md  2026-04-04-image-component-design.md  2026-04-04-phase9-devex-design.md  2026-04-04-reimgui-mvp-implementation-design.md  2026-04-05-adaptive-frame-loop-design.md  2026-04-05-batch3-4-design.md  2026-04-05-cpp-binding-design.md  2026-04-05-struct-binding-fixes-design.md  2026-04-05-todo-example-design.md  2026-04-09-example-restructure-design.md  2026-04-09-font-embed-design.md  2026-04-09-phase13-font-input-expansion-design.md  2026-04-09-phase17-window-popup-control-design.md  2026-04-09-phase18-text-display-variants-design.md  2026-04-11-phase20-async-template-design.md  2026-04-11-phase20-custom-template-design.md  2026-04-11-phase20-hotreload-template-design.md  2026-04-11-phase20-networking-template-design.md  2026-04-11-phase20-persistence-template-design.md  2026-04-11-phase20-project-templates-design.md
examples/async/src/: App.tsx  AppState.h  async.h  imx.d.ts  main.cpp
examples/dashboard/src/: App.tsx  DashboardState.h  imx.d.ts  main.cpp
examples/demo/src/: AdvancedDemo.tsx  App.tsx  ButtonsDemo.tsx  CanvasDemo.tsx  ColorDemo.tsx  DemoState.h  DragDropDemo.tsx  ImagesDemo.tsx  InputsDemo.tsx  LayoutDemo.tsx  MenusDemo.tsx  SlidersDemo.tsx  TablesDemo.tsx  TextDemo.tsx  ThemingDemo.tsx  TreesDemo.tsx  imx.d.ts  main.cpp  tsconfig.json
examples/filedialog/src/: App.tsx  AppState.h  imx.d.ts  main.cpp
examples/gpa/: App.tsx  AppState.h  imx.d.ts  main.cpp
examples/hello/: App.igx  App.tsx  AppState.h  TodoItem.igx  TodoItem.tsx  hand_written_app.cpp  hand_written_app.h  imx.d.ts  main.cpp  reimgui.d.ts  tsconfig.json
examples/hello/src/: App.tsx  main.cpp
examples/hotreload/src/: App.tsx  AppState.h  hotreload.h  imx.d.ts  main.cpp  ui_entry.cpp
examples/kanban/src/: App.tsx  KanbanCard.tsx  KanbanState.h  imx.d.ts  main.cpp
examples/networking/: tsconfig.json
examples/networking/src/: App.tsx  AppState.h  imx.d.ts  main.cpp
examples/persistence/src/: App.tsx  AppState.h  imx.d.ts  main.cpp  persistence.h
examples/phases/src/: App.tsx  Phase11.tsx  Phase12.tsx  Phase13.tsx  Phase14.tsx  Phase15.tsx  Phase16.tsx  Phase17.tsx  Phase18.tsx  PhasesState.h  imx.d.ts  main.cpp
examples/settings/: App.tsx  SettingGroup.tsx  imx.d.ts  reimgui.d.ts  tsconfig.json
examples/settings/src/: App.tsx  AppearanceSection.tsx  SettingsState.h  TransformSection.tsx  imx.d.ts  main.cpp
examples/todo/src/: App.tsx  TodoItem.tsx  TodoState.h  imx.d.ts  main.cpp
include/imx/: renderer.h  runtime.h
include/reimgui/: renderer.h  runtime.h
renderer/: components.cpp  layout.cpp  style.cpp  texture.cpp  widget_args.cpp
runtime/: component_instance.cpp  render_context.cpp  runtime.cpp  text_buffer.cpp
tests/runtime/: test_instance.cpp  test_lifecycle.cpp  test_state.cpp  test_text_buffer.cpp
